tests/neg/semantic_pointer_diff_incompatible.baa
// EXPECT: طرح مؤشرين يتطلب توافق نوع المؤشر

صحيح الرئيسية() {
    صحيح س = ١.
    حرف ح = 'أ'.

    صحيح* م = &س.
    حرف* ن = &ح.

    صحيح فرق = م - ن.
    إرجع فرق.
}
